Java 23 compile is enabled in maven config